# engineering-atlas

./: .editorconfig  .gitignore  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yaml
apps/api-django/: pyproject.toml
apps/api-django/config/: settings.py
apps/api-django/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/api-django/core/management/commands/: seed_data.py
apps/api-django/core/migrations/: 0001_initial.py
apps/web-next/: error.tsx  loading.tsx  next.config.js  not-found.tsx  package.json  tailwind.config.js  tsconfig.json
apps/web-next/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web-next/app/about/: page.tsx
apps/web-next/app/atlas/: page.tsx
apps/web-next/app/contact/: page.tsx
apps/web-next/app/demos/: page.tsx
apps/web-next/components/: framework-switcher.tsx  navigation.tsx
apps/web-next/lib/: hooks.ts
infrastructure/local/: docker-compose.yml
